--- a/index.html
+++ b/index.html
@@ -133,15 +133,12 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 <p>About Me</p>
-<p>Hello! I’m Merlin Urbanski, a passionate researcher and aspiring data scientist with a deep interest in predictive analytics, spatial data, and statistical modeling. I am currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University.</p>
-<section id="what-i-do" class="level3">
-<h3 class="anchored" data-anchor-id="what-i-do">What I Do</h3>
+<p>Hello! I’m Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian inference, Deep learning, Causal Inference, and psychological Diagnostics.</p>
+<section id="current-tasks" class="level3">
+<h3 class="anchored" data-anchor-id="current-tasks">Current tasks</h3>
 <ul>
-<li><strong>Predictive Analytics</strong>: Designing models to uncover insights and make accurate predictions from data.<br>
-</li>
-<li><strong>Statistical Modeling</strong>: Leveraging R and Python to develop robust statistical solutions for challenging problems.<br>
-</li>
-<li><strong>Data Imputation</strong>: Researching innovative ways to handle missing data and ensure model reliability.</li>
+<li><strong>Medical Imaging</strong>: Creating synthetic CT scans based on MRI scans and evaluating the performance and uncertainty of the model.</li>
+<li><strong>Synthetic Data</strong>: Creating synthetic tabular healthcare data using the neural network architecture GAN.</li>
 </ul>
 
 
