--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text"></span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://orcid.org/0009-0001-4577-4152" rel="" target=""><i class="bi bi-orcid" role="img">
+    <a class="nav-link" href="https://orcid.org/0009-0001-4577-4152" rel="" target=""><i class="bi bi-fa-orcid" role="img">
 </i> 
  <span class="menu-text"></span></a>
   </li>  
@@ -133,9 +133,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 <p>About Me</p>
-<p>Hello! I’m Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian inference, Deep learning, Causal Inference, and psychological Diagnostics.</p>
-<section id="current-tasks" class="level3">
-<h3 class="anchored" data-anchor-id="current-tasks">Current tasks</h3>
+<p>Hello! I’m Laura Jochim, currently pursuing my Master’s in Methodology and Statistics for Behavioral, Biomedical, and Social Sciences at Utrecht University. At the moment I specialize in Artificial Intelligence in the field of biomedicine and my interests extent to Bayesian Inference, Deep Learning, Causal Inference, and psychological Diagnostics.</p>
+<section id="current-working-on" class="level3">
+<h3 class="anchored" data-anchor-id="current-working-on">Current working on</h3>
 <ul>
 <li><strong>Medical Imaging</strong>: Creating synthetic CT scans based on MRI scans and evaluating the performance and uncertainty of the model.</li>
 <li><strong>Synthetic Data</strong>: Creating synthetic tabular healthcare data using the neural network architecture GAN.</li>
