--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text"></span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://orcid.org/0009-0001-4577-4152" rel="" target=""><i class="bi bi-fa-orcid" role="img">
+    <a class="nav-link" href="https://orcid.org/0009-0001-4577-4152" rel="" target=""><i class="bi bi-fa-brands fa-orcid" role="img">
 </i> 
  <span class="menu-text"></span></a>
   </li>  
